--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -123,7 +123,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 queryMatches: {
                     type: Boolean,
                     observer: '_queryObserver'
-                }
+                },
+                master: String
             },
 
             ready: function () {
