--- a/src/my-master.html
+++ b/src/my-master.html
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </style>
 
         <div class="name">
-            {{master.name}}
+            <a href="/#/view1/{{master.path}}">{{master.name}}</a>
         </div>
         <div class="hideFace" id="face">
             <iron-image src="/images/masters/{{master.path}}.jpg" alt="" sizing="cover"></iron-image>
